# otus8

./: CMakeLists.txt  main.cpp
